tests/128_for_scope_errors.err
pirxc compilation failed: exit status 1
Output: tests/128_for_scope_errors.pirx:6:18: variable i is not declared before reference
Error: exit status 1
