tests/128_for_scope_errors.pirx
// The for loop variable is not visible after the loop.
func main(): int {
  for var i = 0; i < 3; i++ {
    printf("%d\n", i);
  }
  printf("%d\n", i);
  return 0;
}
